objects/EventModules__c.object
<CustomObject>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Events_Exhibitions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Events/Exhibitions</label>
        <referenceTo>Events_Exhibitions__c</referenceTo>
        <relationshipLabel>EventModules</relationshipLabel>
        <relationshipName>EventModules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Module_Name__c</fullName>
        <label>Module Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General information</fullName>
                </value>
                <value>
                    <fullName>Prospects</fullName>
                </value>
                <value>
                    <fullName>Booth</fullName>
                </value>
                <value>
                    <fullName>Samples</fullName>
                </value>
                <value>
                    <fullName>Literature</fullName>
                </value>
                <value>
                    <fullName>Give aways</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EventModules</label>
    <nameField>
        <displayFormat>Event-{0000}</displayFormat>
        <label>EventModules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EventModules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>